--- a/public/index.html
+++ b/public/index.html
@@ -63,18 +63,17 @@
 				<div class="row justify-content-between px-3">
 					<div class="col-lg-7 pt-5 pt-lg-0 order-2 order-lg-1 d-flex align-items-center home-txt">
 						<div data-aos="zoom-out">
-							<h1>우리 동네의 모든 공공소식<br /><span>동네랑</span></h1>
+							<h1>우리 동네의 모든 공공소식</h1>
+							<h1><span>동네랑</span></h1>
 							<h2>여러 홈페이지에 흩어져 있는 시민을 위한 각종 소식들, <br />내가 필요한 정보만 쏙쏙- 한 눈에 볼 수 있는 <strong>동네랑</strong>을 이용해 보세요.</h2>
-							<div class="text-lg-start">
-								<a href="https://apps.apple.com/kr/app/%EB%8F%99%EB%84%A4%EB%9E%91/id6444590791" class="btn-get-started scrollto">iOS 다운로드</a>
-							</div>
-							<div class="text-lg-start last-btn">
-								<a href="https://play.google.com/store/apps/details?id=com.dongnerang.com.dongnerang" class="btn-get-started scrollto">안드로이드 다운로드</a>
+							<div>
+								<a class="btn-get-started" href="https://apps.apple.com/kr/app/%EB%8F%99%EB%84%A4%EB%9E%91/id6444590791"><img src="assets/img/downloadApple.png" /></a>
+								<a class="btn-get-started" href="https://play.google.com/store/apps/details?id=com.dongnerang.com.dongnerang"><img src="assets/img/downloadAndroid.png" /></a>
 							</div>
 						</div>
 					</div>
 					<div class="col-lg-4 order-1 order-lg-2 home-img" data-aos="zoom-out" data-aos-delay="300">
-						<img src="assets/img/homeImg.png" class="img-fluid animated" alt="" />
+						<img src="assets/img/mainImg.png" class="img-fluid animated" alt="" />
 					</div>
 				</div>
 			</div>
@@ -86,36 +85,32 @@
 		<section id="details" class="details">
 			<div class="container">
 				<div class="row content px-3">
-					<div class="col-md-4 px-3" data-aos="fade-right">
+					<div class="col-md-6 pt-5 text-center" data-aos="fade-right">
 						<img src="assets/img/detail1.png" class="img-fluid" alt="" />
 					</div>
-					<div class="col-md-8 px-5" data-aos="fade-up">
-						<h3>공공소식을 한눈에</h3>
-						<p>지역 별 공공소식을 모아서 확인할 수 있습니다.</p>
-						<p>시민 지원사업, 교육, 축제까지 관심사를 설정하고 나에게 딱 맞는 동네 활동을 시작해 보세요!</p>
+					<div class="col-md-6 pt-5" data-aos="fade-up">
+						<h3>유용한 공공소식,<br />언제까지 놓치실 건가요?</h3>
+						<p>나의 거주지역, 관심지역, 활동지역<br />이 세 곳만 설정하면 활용하기 좋은<br />공공소식들을 한눈에 확인할 수 있어요.</p>
 					</div>
 				</div>
 
 				<div class="row content px-3">
-					<div class="col-md-4 px-3 order-1 order-md-2" data-aos="fade-left">
-						<img src="assets/img/detail3.png" class="img-fluid" alt="" />
-					</div>
-					<div class="col-md-8 px-5 order-2 order-md-1" data-aos="fade-up">
-						<h3>맞춤형 푸시 알림</h3>
-						<p>다양한 소식을 남발하는 공공앱과 달리 관심사, 개개인의 프로필 정보를 기반으로 알맞은 공공소식을 전달해 드립니다.</p>
-						<ul>
-							<li><i class="bi bi-check"></i> 관심 키워드와 개인 정보를 설정하고 맞춤형 소식 알림을 받을 수 있습니다.</li>
-						</ul>
-					</div>
-				</div>
-
-				<div class="row content px-3">
-					<div class="col-md-4 px-3" data-aos="fade-right">
+					<div class="col-md-6 pt-5 order-1 order-md-2 text-center" data-aos="fade-left">
 						<img src="assets/img/detail2.png" class="img-fluid" alt="" />
 					</div>
-					<div class="col-md-8 px-5" data-aos="fade-up">
-						<h3>저장과 공유 기능</h3>
-						<p>관심 있는 공공소식을 저장하고 지인들에게 공유해 보세요!<br />저장한 공공소식은 마이페이지에서 확인할 수 있답니다.</p>
+					<div class="col-md-6 pt-5 order-2 order-md-1 text-end" data-aos="fade-up">
+						<h3>일일이 찾아보지 않고<br />관심 키워드로 똑똑하게</h3>
+						<p>관심 키워드 설정을 통해 하나하나<br />찾아야 했던 공공소식들을 푸시 알람으로<br />간편하고 빠르게 받아볼 수 있어요.</p>
+					</div>
+				</div>
+
+				<div class="row content px-3">
+					<div class="col-md-6 pt-5 text-center" data-aos="fade-right">
+						<img src="assets/img/detail3.png" class="img-fluid" alt="" />
+					</div>
+					<div class="col-md-6 pt-5" data-aos="fade-up">
+						<h3>마음에 드는 공공사업은<br />스크랩과 공유</h3>
+						<p>스크랩한 공공사업은 마이페이지에서 확인하고<br />지인들에게 공공사업을 공유하여<br />2배로 의미있는 동네 생활을 해보아요.</p>
 					</div>
 				</div>
 
@@ -164,29 +159,32 @@
 					<p>Contact Us</p>
 				</div>
 
-				<div class=".">
-					<div class="col-lg-12" data-aos="fade-right" data-aos-delay="100">
-						<div class="row info">
-							<div class="col-lg-4 address">
-								<i class="bi bi-geo-alt"></i>
-								<h4>Location:</h4>
-								<p>서울 특별시 동작구 상도로47아길 44-1, 3층(상도동, 동작구 청년창업지원센터)</p>
-							</div>
-
-							<div class="col-lg-4 email">
-								<i class="bi bi-envelope"></i>
-								<h4>Email:</h4>
-								<p>yeon220629@naver.com</p>
-							</div>
-
-							<div class="col-lg-4 phone">
-								<i class="bi bi-phone"></i>
-								<h4>Call:</h4>
-								<p>+82 010-8978-7350</p>
-							</div>
+				<!-- <div class="row"> -->
+				<!-- <div class="col-lg-12" data-aos="fade-right" data-aos-delay="100"> -->
+				<div class="row info" data-aos="fade-right" data-aos-delay="100">
+					<div class="col-lg-4 address">
+						<div class="col-md-2">
+							<i class="bi bi-geo-alt"></i>
 						</div>
+						<p>서울 특별시 동작구 상도로47아길 44-1, <br />3층(상도동, 동작구 청년창업지원센터)</p>
+					</div>
+
+					<div class="col-lg-4 email">
+						<div class="col-md-2">
+							<i class="bi bi-envelope"></i>
+						</div>
+						<p>yeon220629@naver.com</p>
+					</div>
+
+					<div class="col-lg-4 phone">
+						<div class="col-md-2">
+							<i class="bi bi-phone"></i>
+						</div>
+						<p>+82 010-8978-7350</p>
 					</div>
 				</div>
+				<!-- </div> -->
+				<!-- </div> -->
 			</div>
 		</section>
 
