--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<title>DongNaeRang</title>
+		<title>동네랑</title>
 
 		<!-- Favicons -->
 		<link rel="icon" href="assets/img/favicon.png" />
