--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,9 @@
 	<head>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
+
 		<title>동네랑</title>
+		<meta name="description" content="동네랑 - 우리 동네의 모든 공공소식" />
 
 		<!-- Favicons -->
 		<link rel="icon" href="assets/img/favicon.png" />
