--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,7 @@
 
 		<title>동네랑</title>
 		<meta name="description" content="동네랑 - 우리 동네의 모든 공공소식" />
+		<meta name="naver-site-verification" content="84805f56a5d00c71457b74ff9dc51714cc518620" />
 
 		<!-- Favicons -->
 		<link rel="icon" href="assets/img/favicon.png" />
